--- a/style.css
+++ b/style.css
@@ -1,9 +1,180 @@
 /*General styles*/
+* {
+    box-sizing: border-box;
+}
+
+
 body {
-    background-color: FFFB87;
     height: 200px;
     color: #291f1a;
     font-family:'Lato', sans-serif; 
+    margin: 0px;
     
 }
+
+span {
+    color: #1ac056;
+    font-weight: 400;
+}
+
+section {
+    padding: 0 80px 100px;
+    width: 100%;
+}
+
+h1, h2, h3, h4, h5 {
+    text-align: center;
+}
+
+section>h2 {
+    font-size: 30px;
+    font-weight: 300;
+    margin-top: 60px;
+    margin-bottom: 35px;
+}
+
+}
+
+#menu {
+    background-color: #fff;
+    text-align: right;
+    color: #000;
+    width: 100%;
+    top: 0px;
+    left: 0px;
+    position:fixed; 
+}
+
+/*Menu nawigacyjne*/
+
+#main-nav > ul {
+    margin: 0;
+    float: right;
+   
+}
+
+.menu-item {
+    display: inline-block;
+    padding: 20px 40px;
+       
+}
+
+#menu>ul>li>a {
+    color:#1ac056;
+    text-decoration: none;
+    background-color: #fff;    
+}
+
+#menu>ul>li>a:hover {
+    color:black;
+    text-decoration: none;
+    background-color: #fff;
+    
+}
+
+/*KONIEC*/
+
+/*Główny kontener*/
+#main_header {
+    background-image: url(../Moj_projekt/header-background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center; 
+    text-align: center;
+    padding: 30vh;
+    
+}
+
+#main_header .main_header_content h1 {
+    font-size: 4em;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 200;
+    color: #fff;
+}
+
+#main_header .main_header_content h2 {
+    font-weight: 200;
+    color: #fff;
+}
+
+/*STOP*/
+
+/*Sekcja o mnie*/
+#about {
+    background-color: #f9fcfe;
+    overflow: hidden;
+}
+
+#about>figure {
+    width: 50%;
+    float:left;
+    margin: 0;
+    text-align: center;  
+    
+}
+
+#about>article>p {
+    width: 50%;
+    float:left;
+    font-weight: 300;
+    line-height: 25px;
+
+}
+
+#about>figure>img {
+    max-height: 350px;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: #f9fcfe;
+    max-width: 100%;
+}
+/*KONIEC*/
+
+/*Sekcja umiejętności*/
+
+#skills> p {
+    text-align: center;
+}
+
+#skills div#skills_icons {
+    text-align: center;
+}
+
+#skills #skills_icons figure {
+    display: inline-block;
+    text-align: center;
+}
+
+#skills #skills_icons figure img {
+    margin-bottom: : 15px;
+    text-align: center;
+}
+
+p {
+    width: 100%;
+    font-weight: 300;
+       
+}
+/*Stopka- Start-*/
+h2#contact-header {
+    font-size: 25px;
+    text-align: left;
+    color: white;
+    font-style: 
+      
+}
+footer {
+    background-color:#2D3899;
+}
+ 
+address {
+    text-align: left;
+    width: 50%;
+    float:left;
+    font-weight: 300;
+    line-height: 25px;
+    
+    
+}
+/*Stopka-Stop-*/
 
